# ace-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  aabb.h  bitmap.h  build.sh  bvh.cpp  bvh.h  camera.h  colour.cpp  colour.h  configure.sh  hittable.h  hittable_list.cpp  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  pixel.h  quad.h  ray.h  raylib_window.cpp  raylib_window.h  rtw_stb_image.h  rtweekend.h  run.sh  sphere.cpp  sphere.h  stb_impl.cpp  texture.h  timing.h  vec3.h
cmake/: macos.cmake  raylib.cmake
src/: aabb.h  bitmap.h  bvh.cpp  bvh.h  camera.h  colour.h  constant_medium.h  hittable.h  hittable_list.cpp  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.cpp  quad.h  ray.h  raylib_draw.cpp  raylib_window.cpp  raylib_window.h  rtw_stb_image.h  rtweekend.h  sphere.cpp  sphere.h  texture.h
